Relax reflection constraints